# aws_eb_worker_python

./: .dockerignore  .gitignore  Dockerfile  Dockerrun.aws.json  LICENSE  README.md  pyproject.toml
myapp/: dosomething.py
rest/: daemonlistener.py  wsgi.py
scripts/: gunicorn_start.sh
