[build-system]
requires = ["poetry==0.12.16"]

[tool.poetry]
name = "aws_eb_worker_python"
version = "0.0.1"
description = "AWS EB Python worker example based on Flask"
authors = ["Nico de Vos <njdevos@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.6"
boto3 = "*"
Flask = "*"

[tool.poetry.dev-dependencies]
awscli = "^1.16"
pytest = "*"
